meetup-resources/jenkins.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jenkins
    component: "buildserver"
  name: jenkins
  namespace: jenkins
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: http-port
    nodePort: 31456
  selector:
    app: jenkins
  type: NodePort

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: depauna/jenkins:latest
        ports:
        - name: http-port
          containerPort: 8080
        - name: jnlp-port
          containerPort: 50000
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
          subPath: NatanDepauw/jenkins
        - name: docker-home
          mountPath: /var/run/docker.sock
        securityContext:
          runAsUser: 0
      volumes:
      - name: jenkins-home
        hostPath:
          path: /data/
          type: Directory
      - name: docker-home
        hostPath:
          path: /var/run/docker.sock
