meetup-resources/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: jenkins
  labels:
    name: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    role: mongo

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongo
  namespace: jenkins
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        role: "mongo"
        environment: development
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - image: mongo:latest
        name: mongo
        ports:
        - containerPort: 27017
        resources: {}
        imagePullPolicy: Always
