meetup-resources/nginx-ingress-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: nginx-ingress
 namespace: ingress-nginx
spec:
 type: NodePort
 ports:
   - port: 80
     nodePort: 31654
     name: http
 selector:
   k8s-app: ingress-nginx
