meetup-resources/ingress-book.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/app-root: /
  name: book-store-ingress
  namespace: user1
spec:
  rules:
  - host: kubernetes-elb-test-1078957791.eu-west-1.elb.amazonaws.com
    http:
      paths:
      - backend:
          serviceName: book-store-service
          servicePort: 3000
        path: /user1
