meetup-resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: coreos
spec:
  rules:
  - host: kubernetes-elb-test-1078957791.eu-west-1.elb.amazonaws.com
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
        path: /jenkins
